@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.27 2008-06-18 20:58:03 nicm Exp $
+# $Id: GNUmakefile,v 1.28 2008-06-19 20:45:20 nicm Exp $
 
 .PHONY: clean
 
@@ -14,7 +14,8 @@ META?= \002
 SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       xmalloc.c xmalloc-debug.c input.c input-keys.c screen.c screen-display.c \
       window.c session.c log.c client.c client-msg.c client-fn.c cfg.c \
-      key-string.c key-bindings.c resize.c arg.c cmd.c cmd-generic.c \
+      key-string.c key-bindings.c resize.c arg.c \
+      cmd.c cmd-generic.c cmd-string.c \
       cmd-detach-client.c cmd-list-sessions.c cmd-new-window.c cmd-bind-key.c \
       cmd-unbind-key.c cmd-previous-window.c cmd-last-window.c cmd-list-keys.c \
       cmd-set-option.c cmd-rename-window.c cmd-select-window.c \
@@ -25,7 +26,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-switch-client.c cmd-has-session.c cmd-scroll-mode.c cmd-copy-mode.c \
       cmd-paste-buffer.c cmd-new-session.c cmd-start-server.c \
       cmd-kill-server.c cmd-set-window-option.c cmd-show-options.c \
-      cmd-show-window-options.c \
+      cmd-show-window-options.c cmd-command-prompt.c \
       window-scroll.c window-more.c window-copy.c options.c \
       tty.c tty-keys.c tty-write.c screen-write.c screen-redraw.c
 
