@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.49 2008-06-18 22:21:51 nicm Exp $ */
+/* $Id: cmd.c,v 1.50 2008-06-19 20:45:20 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -29,6 +29,7 @@
 const struct cmd_entry *cmd_table[] = {
 	&cmd_attach_session_entry,
 	&cmd_bind_key_entry,
+	&cmd_command_prompt_entry,
 	&cmd_copy_mode_entry,
 	&cmd_detach_client_entry,
 	&cmd_has_session_entry,
